; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_terminal.c_tty_break.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_terminal.c_tty_break.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.termios = type { i32*, i32 }

@stdin = common dso_local global i32 0, align 4
@savemodes = common dso_local global %struct.termios zeroinitializer, align 8
@havemodes = common dso_local global i32 0, align 4
@ICANON = common dso_local global i32 0, align 4
@VMIN = common dso_local global i64 0, align 8
@VTIME = common dso_local global i64 0, align 8
@TCSANOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tty_break() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.termios, align 8
  %3 = load i32, i32* @stdin, align 4
  %4 = call i32 @fileno(i32 %3)
  %5 = call i64 @tcgetattr(i32 %4, %struct.termios* @savemodes)
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 -1, i32* %1, align 4
  br label %27

8:                                                ; preds = %0
  store i32 1, i32* @havemodes, align 4
  %9 = bitcast %struct.termios* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %9, i8* align 8 bitcast (%struct.termios* @savemodes to i8*), i64 16, i1 false)
  %10 = load i32, i32* @ICANON, align 4
  %11 = xor i32 %10, -1
  %12 = getelementptr inbounds %struct.termios, %struct.termios* %2, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = and i32 %13, %11
  store i32 %14, i32* %12, align 8
  %15 = getelementptr inbounds %struct.termios, %struct.termios* %2, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i64, i64* @VMIN, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  store i32 1, i32* %18, align 4
  %19 = getelementptr inbounds %struct.termios, %struct.termios* %2, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i64, i64* @VTIME, align 8
  %22 = getelementptr inbounds i32, i32* %20, i64 %21
  store i32 0, i32* %22, align 4
  %23 = load i32, i32* @stdin, align 4
  %24 = call i32 @fileno(i32 %23)
  %25 = load i32, i32* @TCSANOW, align 4
  %26 = call i32 @tcsetattr(i32 %24, i32 %25, %struct.termios* %2)
  store i32 %26, i32* %1, align 4
  br label %27

27:                                               ; preds = %8, %7
  %28 = load i32, i32* %1, align 4
  ret i32 %28
}

declare dso_local i64 @tcgetattr(i32, %struct.termios*) #1

declare dso_local i32 @fileno(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @tcsetattr(i32, i32, %struct.termios*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
